[gd_scene load_steps=6 format=2]

[ext_resource path="res://Networking/Lobby/Menus/MatchMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Networking/Lobby/LobbyUI.gd" type="Script" id=2]
[ext_resource path="res://Networking/Lobby/Menus/CreateMatchMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Networking/Lobby/Menus/MainLobbyMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Networking/Lobby/BlockerMenu.gd" type="Script" id=5]

[node name="LobbyUI" type="CanvasLayer" groups=[
"LobbyUI",
]]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLobbyMenu" parent="Control" instance=ExtResource( 4 )]
auto_hide = false

[node name="CreateMatchMenu" parent="Control" instance=ExtResource( 3 )]

[node name="MatchMenu" parent="Control" instance=ExtResource( 1 )]

[node name="Blocker" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/Blocker"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="on_back_pressed" from="Control/MainLobbyMenu" to="." method="_on_MainLobbyMenu_on_back_pressed"]
[connection signal="on_create_pressed" from="Control/MainLobbyMenu" to="." method="_on_MainLobbyMenu_on_create_pressed"]
[connection signal="on_cancel_pressed" from="Control/CreateMatchMenu" to="." method="_on_CreateMatchMenu_on_cancel_pressed"]
[connection signal="on_create_pressed" from="Control/CreateMatchMenu" to="." method="_on_CreateMatchMenu_on_create_pressed"]
[connection signal="on_back_pressed" from="Control/MatchMenu" to="." method="_on_MatchMenu_on_back_pressed"]
[connection signal="on_tried_to_start_game" from="Control/MatchMenu" to="." method="_on_MatchMenu_on_tried_to_start_game"]
