[gd_scene load_steps=3 format=2]

[ext_resource path="res://Networking/Lobby/PlayerDisplayTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Networking/Lobby/LobbyUI.gd" type="Script" id=2]

[node name="LobbyUI" type="CanvasLayer"]
script = ExtResource( 2 )
player_display_scene = ExtResource( 1 )
player_displays_node_path = NodePath("Control/Displays BG/PlayerDisplayCont/VBox")
line_edit_node_path = NodePath("Control/Chat BG/LineEdit")
chat_node_path = NodePath("Control/Chat BG/ColorRect/RichTextLabel")

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat BG" type="ColorRect" parent="Control"]
anchor_left = 0.196
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.29599
margin_top = 21.0
margin_right = -24.0
margin_bottom = -20.0
color = Color( 0.0705882, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/Chat BG"]
anchor_right = 1.0
anchor_bottom = 0.89
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -0.0100098
rect_min_size = Vector2( 779, 270 )
color = Color( 0.121569, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Chat BG/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 270 )
bbcode_enabled = true
bbcode_text = "Welcome To Lobby"
text = "Welcome To Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Control/Chat BG"]
anchor_left = 0.013
anchor_top = 0.903
anchor_right = 0.987
anchor_bottom = 0.981
margin_left = -0.387
margin_top = -0.0270081
margin_right = 0.386963
margin_bottom = -0.129028
rect_min_size = Vector2( 750, 20 )

[node name="Displays BG" type="ColorRect" parent="Control"]
anchor_bottom = 1.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = -20.0
rect_min_size = Vector2( 200, 310 )
color = Color( 0.266667, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerDisplayCont" type="ScrollContainer" parent="Control/Displays BG"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Control/Displays BG/PlayerDisplayCont"]
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="Control/Chat BG/LineEdit" to="." method="_on_LineEdit_text_entered"]
